https://unit.atlassian.net/browse/NP-45045 #NP-45045 fixing problems